Repository pattern set up

--- a/AccountMgt.API/appsettings.json
+++ b/AccountMgt.API/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "ConnStr": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FidelityAccountMgtDb;Integrated Security=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+
+  },
   "AllowedHosts": "*"
 }
