--- a/AccountMgt.CORE/AccountMgt.CORE.csproj
+++ b/AccountMgt.CORE/AccountMgt.CORE.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -13,12 +13,5 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\AccountMgt.CORE\AccountMgt.CORE.csproj" />
-    <ProjectReference Include="..\AccountMgt.DATA\AccountMgt.DATA.csproj" />
-    <ProjectReference Include="..\AccountMgt.SERVICE\AccountMgt.SERVICE.csproj" />
-  </ItemGroup>
-
 
 </Project>
