--- a/AccountMgt.SERVICE/AccountMgt.SERVICE.csproj
+++ b/AccountMgt.SERVICE/AccountMgt.SERVICE.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -17,8 +17,6 @@
   <ItemGroup>
     <ProjectReference Include="..\AccountMgt.CORE\AccountMgt.CORE.csproj" />
     <ProjectReference Include="..\AccountMgt.DATA\AccountMgt.DATA.csproj" />
-    <ProjectReference Include="..\AccountMgt.SERVICE\AccountMgt.SERVICE.csproj" />
   </ItemGroup>
-
 
 </Project>
